Compiler/tests/syntax/good/testfile-comments-1.rs
fn main() { print!(// un commentaire
2 /* et un autre */
); return;
}
