Compiler/tests/syntax/bad/testfile-comments-2.rs

/* oups /* et encore oups */
fn main() { }
